--- a/assets/styles/partials/_common.scss
+++ b/assets/styles/partials/_common.scss
@@ -12,19 +12,21 @@ body{
 }
 
 ul.search-sub-menu {
-    height:0px;
+    position:relative;
+    z-index:1;
+    margin-top:-80px;
+    height:80px;
     margin-bottom:0;
     background: rgba(255,255,255,.8);
-    // position:absolute;
+       -moz-box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4), inset 0 -7px 9px -7px rgba(0,0,0,0.4);
+    -webkit-box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4), inset 0 -7px 9px -7px rgba(0,0,0,0.4);
+            box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4), inset 0 -7px 9px -7px rgba(0,0,0,0.4);
     z-index:1;
     width:100%;
     @include transition(0.2s);
 
     &.active {
-        height:80px;
-           -moz-box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4), inset 0 -7px 9px -7px rgba(0,0,0,0.4);
-        -webkit-box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4), inset 0 -7px 9px -7px rgba(0,0,0,0.4);
-                box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4), inset 0 -7px 9px -7px rgba(0,0,0,0.4);
+        margin-top:0;
     }
 }
 
