--- a/assets/styles/partials/_site-header.scss
+++ b/assets/styles/partials/_site-header.scss
@@ -1,6 +1,8 @@
 .site-header {
+    position:relative;
     padding:0;
     max-width:none;
+    z-index:2;
 
     .site-header-main {
         background:#2b3744;
