--- a/static/css/concat.css
+++ b/static/css/concat.css
@@ -7173,9 +7173,15 @@ body {
       overflow-x: hidden; } }
 
 ul.search-sub-menu {
-  height: 0px;
+  position: relative;
+  z-index: 1;
+  margin-top: -80px;
+  height: 80px;
   margin-bottom: 0;
   background: rgba(255, 255, 255, 0.8);
+  -moz-box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4), inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4), inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
+  box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4), inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
   z-index: 1;
   width: 100%;
   transition: all 0.3s ease-in;
@@ -7184,10 +7190,7 @@ ul.search-sub-menu {
   -webkit-transition: all 0.3s ease-in;
   -ms-transition: all 0.3s ease-in; }
   ul.search-sub-menu.active {
-    height: 80px;
-    -moz-box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4), inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4), inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
-    box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4), inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4); }
+    margin-top: 0; }
 
 .search-icon {
   background-image: url(../images/search.svg);
@@ -8450,8 +8453,10 @@ ul.menu > li > ul.sub-menu.breaking-news-menu > li > ul.sub-sub-menu > li {
     display: inline-block; } }
 
 .site-header {
+  position: relative;
   padding: 0;
-  max-width: none; }
+  max-width: none;
+  z-index: 2; }
   .site-header .site-header-main {
     background: #2b3744;
     height: 150px; }
@@ -9336,7 +9341,10 @@ body.article {
       margin-bottom: 26px; }
       @media screen and (max-width: 768px) {
         .article article.article-main .page-content .content-block-top h1 {
-          font-size: 3em; } }
+          font-size: 3rem; } }
+      @media screen and (max-width: 620px) {
+        .article article.article-main .page-content .content-block-top h1 {
+          font-size: 2.4rem; } }
     .article article.article-main .page-content .content-block-top p.author {
       font-family: "adelle-sans", Helvetica, Arial, sans-serif;
       font-size: 1.2rem;
@@ -9344,8 +9352,13 @@ body.article {
       line-height: 1.67;
       color: #333333; }
     .article article.article-main .page-content .content-block-top p.bio {
-      height: 60px;
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      font-size: 1.6rem;
+      font-style: italic;
+      line-height: 1.29; }
+      @media screen and (max-width: 620px) {
+        .article article.article-main .page-content .content-block-top p.bio {
+          font-size: 1.4rem; } }
     .article article.article-main .page-content .content-block-top div.time_to_read {
       border-top: 1px solid #979797;
       border-bottom: 1px solid #979797;
